Organizacion de secciones

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="x-ua-compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Untrefschool</title>
     <link rel="stylesheet" href="style.css">
@@ -17,21 +18,39 @@
           <li><a href="#">Ultimas noticias</a></li>
         </ul>
       </nav>
-      <section><h3>Quienes somos</h3>
-    <p>"Nuestra institución educativa, Academia Educativa, ha estado brindando educación de calidad durante más de 20 años. Nos enorgullece ser reconocidos como líderes en la formación integral de nuestros estudiantes. Nuestro equipo de docentes altamente capacitados se dedica a fomentar un ambiente de aprendizaje estimulante y motivador. Valoramos el crecimiento académico y personal de nuestros estudiantes y nos esforzamos por prepararlos para un futuro exitoso".</p></section>
-      <section><h3>¿Porque elegirnos?</h3>
-    <p>"En Academia Educativa, ofrecemos una experiencia educativa excepcional que marca la diferencia. Aquí, nos preocupamos por cada estudiante de manera individualizada, brindando atención personalizada para satisfacer sus necesidades únicas de aprendizaje. Nuestro enfoque innovador combina los estándares académicos más altos con el desarrollo de habilidades prácticas y el fomento de la creatividad. Además, nuestras instalaciones modernas y recursos tecnológicos de vanguardia garantizan un entorno propicio para el crecimiento y el éxito".</p></section>
-      <section><h3>Propuesta Educativa</h3>
-    <p>"Nuestra propuesta educativa se basa en un enfoque holístico que promueve el desarrollo integral de nuestros estudiantes. Además de un plan de estudios sólido y riguroso, ofrecemos una amplia variedad de actividades extracurriculares, como deportes, artes y clubes estudiantiles. Fomentamos el pensamiento crítico, la resolución de problemas y el trabajo en equipo. Nuestro objetivo es preparar a nuestros estudiantes para enfrentar los desafíos del mundo actual y convertirse en ciudadanos responsables y exitosos".</p></section>
-      <section><h3>Ultimas Noticias</h3>
-        <ul>
-            <li>¡Celebramos el éxito de nuestros estudiantes en el Concurso de Matemáticas!</li>
-            <li>Inauguramos nuestro nuevo laboratorio de ciencias con equipos de última generación.</li>
-            <li>Nuestro equipo de debate se lleva el primer lugar en el torneo regional.</li>
-            <li>Excursión educativa al museo local para enriquecer el aprendizaje histórico de nuestros estudiantes.</li>
-          </ul>
+    <div>
+        <section>
+            <h3>Quienes somos</h3>
+            <p>"Nuestra institución educativa, Academia Educativa, ha estado brindando educación de calidad durante más de 20 años. Nos enorgullece ser reconocidos como líderes en la formación integral de nuestros estudiantes. Nuestro equipo de docentes altamente capacitados se dedica a fomentar un ambiente de aprendizaje estimulante y motivador. Valoramos el crecimiento académico y personal de nuestros estudiantes y nos esforzamos por prepararlos para un futuro exitoso".
+            </p>
+        </section>
+    </div>
+    <div>
+        <section>
+            <h3>¿Porque elegirnos?</h3>
+            <p>"En Academia Educativa, ofrecemos una experiencia educativa excepcional que marca la diferencia. Aquí, nos preocupamos por cada estudiante de manera individualizada, brindando atención personalizada para satisfacer sus necesidades únicas de aprendizaje. Nuestro enfoque innovador combina los estándares académicos más altos con el desarrollo de habilidades prácticas y el fomento de la creatividad. Además, nuestras instalaciones modernas y recursos tecnológicos de vanguardia garantizan un entorno propicio para el crecimiento y el éxito".</p>
+        </section>
+    </div>
+    <div>
+        <section>
+            <h3>Propuesta Educativa</h3>
+            <p>"Nuestra propuesta educativa se basa en un enfoque holístico que promueve el desarrollo integral de nuestros estudiantes. Además de un plan de estudios sólido y riguroso, ofrecemos una amplia variedad de actividades extracurriculares, como deportes, artes y clubes estudiantiles. Fomentamos el pensamiento crítico, la resolución de problemas y el trabajo en equipo. Nuestro objetivo es preparar a nuestros estudiantes para enfrentar los desafíos del mundo actual y convertirse en ciudadanos responsables y exitosos".
+            </p>
+        </section>
+    </div>
+    
+    <div>
+        <section>
+            <h3>Ultimas Noticias</h3>
+            <ul>
+                <li>¡Celebramos el éxito de nuestros estudiantes en el Concurso de Matemáticas!</li>
+                <li>Inauguramos nuestro nuevo laboratorio de ciencias con equipos de última generación.</li>
+                <li>Nuestro equipo de debate se lleva el primer lugar en el torneo regional.</li>
+                <li>Excursión educativa al museo local para enriquecer el aprendizaje histórico de nuestros estudiantes.</li>
+            </ul>
           
-</section>
+        </section>
+</div>
 <hr>
     <footer>
         <section><p>Redes Sociales</p>
