--- a/index.html
+++ b/index.html
@@ -12,26 +12,27 @@
     <hr>
     <nav>
         <ul>
-          <li><a href="#">Quienes somos</a></li>
-          <li><a href="#">¿Porque elegirnos?</a></li>
-          <li><a href="#">Propuesta Educativa</a></li>
-          <li><a href="#">Ultimas noticias</a></li>
+          <li><a href="#quienes somos">Quienes somos</a></li>
+          <li><a href="#¿Porque elegirnos?">¿Porque elegirnos?</a></li>
+          <li><a href="#Propuesta Educativa">Propuesta Educativa</a></li>
+          <li><a href="#Ultimas Noticias">Ultimas noticias</a></li>
+          <li><a href="indexcontacto.html">Contacto</a></li>
         </ul>
       </nav>
-    <div>
+    <div id="quienes somos">
         <section>
             <h3>Quienes somos</h3>
             <p>"Nuestra institución educativa, Academia Educativa, ha estado brindando educación de calidad durante más de 20 años. Nos enorgullece ser reconocidos como líderes en la formación integral de nuestros estudiantes. Nuestro equipo de docentes altamente capacitados se dedica a fomentar un ambiente de aprendizaje estimulante y motivador. Valoramos el crecimiento académico y personal de nuestros estudiantes y nos esforzamos por prepararlos para un futuro exitoso".
             </p>
         </section>
     </div>
-    <div>
+    <div id="¿Porque elegirnos?">
         <section>
             <h3>¿Porque elegirnos?</h3>
             <p>"En Academia Educativa, ofrecemos una experiencia educativa excepcional que marca la diferencia. Aquí, nos preocupamos por cada estudiante de manera individualizada, brindando atención personalizada para satisfacer sus necesidades únicas de aprendizaje. Nuestro enfoque innovador combina los estándares académicos más altos con el desarrollo de habilidades prácticas y el fomento de la creatividad. Además, nuestras instalaciones modernas y recursos tecnológicos de vanguardia garantizan un entorno propicio para el crecimiento y el éxito".</p>
         </section>
     </div>
-    <div>
+    <div id="Propuesta Educativa">
         <section>
             <h3>Propuesta Educativa</h3>
             <p>"Nuestra propuesta educativa se basa en un enfoque holístico que promueve el desarrollo integral de nuestros estudiantes. Además de un plan de estudios sólido y riguroso, ofrecemos una amplia variedad de actividades extracurriculares, como deportes, artes y clubes estudiantiles. Fomentamos el pensamiento crítico, la resolución de problemas y el trabajo en equipo. Nuestro objetivo es preparar a nuestros estudiantes para enfrentar los desafíos del mundo actual y convertirse en ciudadanos responsables y exitosos".
@@ -39,7 +40,7 @@
         </section>
     </div>
     
-    <div>
+    <div id="Ultimas Noticias">
         <section>
             <h3>Ultimas Noticias</h3>
             <ul>
