--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <meta name="description" content="Sitio de Untref proyecto integrador">
     <meta name="author" content="Luis Alberto Benitez">
     <link rel="stylesheet" href="css/style.css">
@@ -18,14 +18,14 @@
     <hr>
     <nav>
         <ul>
-            <li><a href="#quienes somos">Quienes somos</a></li>
-            <li><a href="#¿Porque elegirnos?">¿Porque elegirnos?</a></li>
-            <li><a href="#Propuesta Educativa">Propuesta Educativa</a></li>
-            <li><a href="#Ultimas Noticias">Ultimas noticias</a></li>
+            <li><a href="#quienessomos">Quienes somos</a></li>
+            <li><a href="#¿Porqueelegirnos?">¿Porque elegirnos?</a></li>
+            <li><a href="#PropuestaEducativa">Propuesta Educativa</a></li>
+            <li><a href="#UltimasNoticias">Ultimas noticias</a></li>
             <li><a href="indexcontacto.html">Contacto</a></li>
         </ul>
     </nav>
-    <div class="quienes" id="quienes somos">
+    <div class="quienes" id="quienessomos">
             <h3>Quienes somos</h3>
             <p>"Nuestra institución educativa, Academia Educativa, ha estado brindando educación de calidad durante más
                 de 20 años. Nos enorgullece ser reconocidos como líderes en la formación integral de nuestros
@@ -34,7 +34,7 @@
                 estudiantes y nos esforzamos por prepararlos para un futuro exitoso".
             </p>
     </div>
-    <div class="elegirnos" id="¿Porque elegirnos?">
+    <div class="elegirnos" id="¿Porqueelegirnos?">
             <h3>¿Porque elegirnos?</h3>
             <p>"En Academia Educativa, ofrecemos una experiencia educativa excepcional que marca la diferencia. Aquí,
                 nos preocupamos por cada estudiante de manera individualizada, brindando atención personalizada para
@@ -43,7 +43,7 @@
                 nuestras instalaciones modernas y recursos tecnológicos de vanguardia garantizan un entorno propicio
                 para el crecimiento y el éxito".</p>
     </div>
-    <div class="propuesta" id="Propuesta Educativa">
+    <div class="propuesta" id="PropuestaEducativa">
             <h3>Propuesta Educativa</h3>
             <p>"Nuestra propuesta educativa se basa en un enfoque holístico que promueve el desarrollo integral de
                 nuestros estudiantes. Además de un plan de estudios sólido y riguroso, ofrecemos una amplia variedad de
@@ -54,7 +54,7 @@
             </p>
     </div>
 
-    <div class="noticias" id="Ultimas Noticias">
+    <div class="noticias" id="UltimasNoticias">
             <h3>Ultimas Noticias</h3>
             <ul>
                 <li>¡Celebramos el éxito de nuestros estudiantes en el Concurso de Matemáticas!</li>
@@ -66,22 +66,22 @@
     </div>
     <hr>
     <footer>
-        <section id="Redes">
+        <div id="Redes">
             <p>Redes Sociales</p>
             <p>Facebook</p>
             <p>Twitter</p>
             <p>Instagram</p>
-        </section>
-        <Section id="direccion">
+        </div>
+        <div id="direccion">
             <p>Nombre del Instituto</p>
             <p>Direccion del instituto</p>
-        </Section>
-        <Section id="contactos">
+        </div>
+        <div id="contactos">
             <p>Contacto</p>
             <p>Email: </p>
             <p>Telefono: </p>
             <p>Whatsapp:</p>
-        </Section>
+        </div>
         <p class="autor">Todos los derechos reservados &copy; 2023 | Autor: Luis Alberto Benitez</p>
     </footer>
 
