--- a/index.html
+++ b/index.html
@@ -2,89 +2,160 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="x-ua-compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <meta name="description" content="Sitio de Untref proyecto integrador">
-    <meta name="author" content="Luis Alberto Benitez">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Untrefschool</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="x-ua-compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+  <meta name="description" content="Sitio de Untref proyecto integrador">
+  <meta name="author" content="Luis Alberto Benitez">
+  <title>Untrefschool</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <header>
-        <h1>UNTREFSCHOOL</h1>
-    </header>
-    <hr>
-    <nav>
-        <ul>
-            <li><a href="#quienessomos">Quienes somos</a></li>
-            <li><a href="#¿Porqueelegirnos?">¿Porque elegirnos?</a></li>
-            <li><a href="#PropuestaEducativa">Propuesta Educativa</a></li>
-            <li><a href="#UltimasNoticias">Ultimas noticias</a></li>
-            <li><a href="indexcontacto.html">Contacto</a></li>
-        </ul>
+  <header>
+    <h1>UNTREFSCHOOL</h1>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container">
+        <a class="navbar-brand" href="#">UNTREFSCHOOL</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#quienessomos">Quienes somos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#¿Porqueelegirnos?">¿Porque elegirnos?</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#PropuestaEducativa">Propuesta Educativa</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#UltimasNoticias">Ultimas noticias</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="indexcontacto.html">Contacto</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
-    <div class="quienes" id="quienessomos">
-            <h3>Quienes somos</h3>
-            <p>"Nuestra institución educativa, Academia Educativa, ha estado brindando educación de calidad durante más
-                de 20 años. Nos enorgullece ser reconocidos como líderes en la formación integral de nuestros
-                estudiantes. Nuestro equipo de docentes altamente capacitados se dedica a fomentar un ambiente de
-                aprendizaje estimulante y motivador. Valoramos el crecimiento académico y personal de nuestros
-                estudiantes y nos esforzamos por prepararlos para un futuro exitoso".
-            </p>
+  </header>
+
+  <div class="container mt-4">
+    <div class="row">
+      <div class="col-lg-6">
+        <div class="quienes" id="quienessomos">
+          <h3>Quienes somos</h3>
+          <p>"Nuestra institución educativa, Academia Educativa, ha estado brindando educación de calidad durante más
+            de 20 años. Nos enorgullece ser reconocidos como líderes en la formación integral de nuestros
+            estudiantes. Nuestro equipo de docentes altamente capacitados se dedica a fomentar un ambiente de
+            aprendizaje estimulante y motivador. Valoramos el crecimiento académico y personal de nuestros
+            estudiantes y nos esforzamos por prepararlos para un futuro exitoso".
+          </p>
+        </div>
+      </div>
+      <div class="col-lg-6">
+        <img src="./img/quienes somos.jpg" alt="Imagen" class="img-thumbnail" width="400">
+      </div>
     </div>
-    <div class="elegirnos" id="¿Porqueelegirnos?">
-            <h3>¿Porque elegirnos?</h3>
-            <p>"En Academia Educativa, ofrecemos una experiencia educativa excepcional que marca la diferencia. Aquí,
-                nos preocupamos por cada estudiante de manera individualizada, brindando atención personalizada para
-                satisfacer sus necesidades únicas de aprendizaje. Nuestro enfoque innovador combina los estándares
-                académicos más altos con el desarrollo de habilidades prácticas y el fomento de la creatividad. Además,
-                nuestras instalaciones modernas y recursos tecnológicos de vanguardia garantizan un entorno propicio
-                para el crecimiento y el éxito".</p>
-    </div>
-    <div class="propuesta" id="PropuestaEducativa">
+
+    <div class="row mt-4">
+      <div class="col-lg-6">
+        <img src="./img/porqueelegirnos.jpg" alt="Imagen" class="img-thumbnail">
+      </div>
+      <div class="col-lg-6">
+        <div class="elegirnos" id="¿Porqueelegirnos?">
+          <h3>¿Porque elegirnos?</h3>
+          <p>"En Academia Educativa, ofrecemos una experiencia educativa excepcional que marca la diferencia. Aquí,
+            nos preocupamos por cada estudiante de manera individualizada, brindando atención personalizada para
+            satisfacer sus necesidades únicas de aprendizaje. Nuestro enfoque innovador combina los estándares
+            académicos más altos con el desarrollo de habilidades prácticas y el fomento de la creatividad. Además,
+            nuestras instalaciones modernas y recursos tecnológicos de vanguardia garantizan un entorno propicio
+            para el crecimiento y el éxito".</p>
+        </div>
+      </div>
+
+      <div class="row mt-4">
+        <div class="col-lg-12">
+          <div class="propuesta" id="PropuestaEducativa">
             <h3>Propuesta Educativa</h3>
             <p>"Nuestra propuesta educativa se basa en un enfoque holístico que promueve el desarrollo integral de
-                nuestros estudiantes. Además de un plan de estudios sólido y riguroso, ofrecemos una amplia variedad de
-                actividades extracurriculares, como deportes, artes y clubes estudiantiles. Fomentamos el pensamiento
-                crítico, la resolución de problemas y el trabajo en equipo. Nuestro objetivo es preparar a nuestros
-                estudiantes para enfrentar los desafíos del mundo actual y convertirse en ciudadanos responsables y
-                exitosos".
+              nuestros estudiantes. Además de un plan de estudios sólido y riguroso, ofrecemos una amplia variedad de
+              actividades extracurriculares, como deportes, artes y clubes estudiantiles. Fomentamos el pensamiento
+              crítico, la resolución de problemas y el trabajo en equipo. Nuestro objetivo es preparar a nuestros
+              estudiantes para enfrentar los desafíos del mundo actual y convertirse en ciudadanos responsables y
+              exitosos".
             </p>
-    </div>
-
-    <div class="noticias" id="UltimasNoticias">
-            <h3>Ultimas Noticias</h3>
-            <ul>
-                <li>¡Celebramos el éxito de nuestros estudiantes en el Concurso de Matemáticas!</li>
-                <li>Inauguramos nuestro nuevo laboratorio de ciencias con equipos de última generación.</li>
-                <li>Nuestro equipo de debate se lleva el primer lugar en el torneo regional.</li>
-                <li>Excursión educativa al museo local para enriquecer el aprendizaje histórico de nuestros estudiantes.
-                </li>
-            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="row mt-4">
+        <div class="col-lg-3">
+          <img src="./img/tubo-de-ensayo1.png" alt="tubo-de-ensayo1" class="img-fluid">
+        </div>
+        <div class="col-lg-3">
+          <img src="./img/crecimiento.gif" alt="crecimiento" class="img-fluid">
+        </div>
+        <div class="col-lg-3">
+          <img src="./img/fisica.png" alt="fisica" class="img-fluid">
+        </div>
+        <div class="col-lg-3">
+          <img src="./img/lapiz.gif" alt="lapiz" class="img-fluid">
+        </div>
+      </div>
     </div>
     <hr>
-    <footer>
-        <div id="Redes">
-            <p>Redes Sociales</p>
-            <p>Facebook</p>
-            <p>Twitter</p>
-            <p>Instagram</p>
+    <div class="col-lg-6">
+      <div class="noticias" id="UltimasNoticias">
+        <h3>Ultimas Noticias</h3>
+        <ul>
+          <li>¡Celebramos el éxito de nuestros estudiantes en el Concurso de Matemáticas!</li>
+          <li>Inauguramos nuestro nuevo laboratorio de ciencias con equipos de última generación.</li>
+          <li>Nuestro equipo de debate se lleva el primer lugar en el torneo regional.</li>
+          <li>Excursión educativa al museo local para enriquecer el aprendizaje histórico de nuestros estudiantes.
+          </li>
+        </ul>
+      </div>
+    </div>
+
+
+    <footer class="mt-4">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4">
+            <h3>Redes Sociales</h3>
+            <ul>
+              <li><a href="https://www.facebook.com/"><img src="./img/facebook.png" alt="facebook" width="20"
+                    height="20"></a></li>
+              <li><a href="https://twitter.com/"><img src="./img/twitter.png" alt="facebook" width="20" height="20"></a>
+              </li>
+              <li><a href="https://www.instagram.com/"><img src="./img/instagram.png" alt="facebook" width="20"
+                    height="20"></a></li>
+            </ul>
+          </div>
+          <div class="col-lg-4">
+            <h3>Instituto</h3>
+            <p>Información sobre el instituto.</p>
+            <div id="map"><iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.7934067973465!2d-58.56507032338573!3d-34.60938525779918!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb825bfe94b41%3A0x9605c0d752a00a83!2sUNTREF%20Virtual!5e0!3m2!1ses!2sar!4v1689795288807!5m2!1ses!2sar"
+                width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+          </div>
+          <div class="col-lg-4">
+            <h3>Contacto</h3>
+            <p>Email: Untrefschool@instituto.com</p>
+            <p>Teléfono: 4277-6543</p>
+            <p>WhatsApp: 1534567890</p>
+          </div>
         </div>
-        <div id="direccion">
-            <p>Nombre del Instituto</p>
-            <p>Direccion del instituto</p>
-        </div>
-        <div id="contactos">
-            <p>Contacto</p>
-            <p>Email: </p>
-            <p>Telefono: </p>
-            <p>Whatsapp:</p>
-        </div>
-        <p class="autor">Todos los derechos reservados &copy; 2023 | Autor: Luis Alberto Benitez</p>
+      </div>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
