--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <header>
-    <h1>UNTREFSCHOOL</h1>
+    <h1 class="titulo">UNTREFSCHOOL</h1>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
         <a class="navbar-brand" href="#">UNTREFSCHOOL</a>
@@ -106,40 +106,34 @@
         <div class="col-lg-3">
           <img src="./img/lapiz.gif" alt="lapiz" class="img-fluid">
         </div>
-      </div>
-    </div>
-    <hr>
+      </div>      
     <div class="col-lg-6">
       <div class="noticias" id="UltimasNoticias">
         <h3>Ultimas Noticias</h3>
-        <ul>
-          <li>¡Celebramos el éxito de nuestros estudiantes en el Concurso de Matemáticas!</li>
-          <li>Inauguramos nuestro nuevo laboratorio de ciencias con equipos de última generación.</li>
-          <li>Nuestro equipo de debate se lleva el primer lugar en el torneo regional.</li>
-          <li>Excursión educativa al museo local para enriquecer el aprendizaje histórico de nuestros estudiantes.
-          </li>
-        </ul>
+        <p>Celebramos el éxito de nuestros estudiantes en el Concurso de Matemáticas.
+           Inauguramos nuestro nuevo laboratorio de ciencias con equipos de última generación.
+           Nuestro equipo de debate se lleva el primer lugar en el torneo regional.
+           Excursión educativa al museo local para enriquecer el aprendizaje histórico de nuestros estudiantes.
+        </p>
       </div>
     </div>
-
-
     <footer class="mt-4">
       <div class="container">
         <div class="row">
           <div class="col-lg-4">
             <h3>Redes Sociales</h3>
-            <ul>
-              <li><a href="https://www.facebook.com/"><img src="./img/facebook.png" alt="facebook" width="20"
-                    height="20"></a></li>
-              <li><a href="https://twitter.com/"><img src="./img/twitter.png" alt="facebook" width="20" height="20"></a>
+            <ul class="red">
+              <li class="redes"><a href="https://www.facebook.com/"><img src="./img/facebook.png" alt="facebook" width="20"
+                    height="20"></a> Facebook</li>
+              <li class="redes"><a href="https://twitter.com/"><img src="./img/twitter.png" alt="facebook" width="20" height="20"></a> Twitter
               </li>
-              <li><a href="https://www.instagram.com/"><img src="./img/instagram.png" alt="facebook" width="20"
-                    height="20"></a></li>
+              <li class="redes"><a href="https://www.instagram.com/"><img src="./img/instagram.png" alt="facebook" width="20"
+                    height="20"></a> Instagram</li>
             </ul>
           </div>
           <div class="col-lg-4">
-            <h3>Instituto</h3>
-            <p>Información sobre el instituto.</p>
+            <h3>UNTREFSCHOOL</h3>
+            <p>Mapa interactivo</p>
             <div id="map"><iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.7934067973465!2d-58.56507032338573!3d-34.60938525779918!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb825bfe94b41%3A0x9605c0d752a00a83!2sUNTREF%20Virtual!5e0!3m2!1ses!2sar!4v1689795288807!5m2!1ses!2sar"
                 width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy"
@@ -147,7 +141,7 @@
           </div>
           <div class="col-lg-4">
             <h3>Contacto</h3>
-            <p>Email: Untrefschool@instituto.com</p>
+            <p>Email: Untrefschool@untref.edu.ar</p>
             <p>Teléfono: 4277-6543</p>
             <p>WhatsApp: 1534567890</p>
           </div>
