--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <header>
     <h1 class="titulo">UNTREFSCHOOL</h1>
-    <nav class="navbar navbar-expand-xxl navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
         <a class="navbar-brand" href="#">UNTREFSCHOOL</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -44,123 +44,135 @@
       </div>
     </nav>
   </header>
-
-  <div class="contenedor" class="container mt-4">
-    <div class="row">
-      <div class="col-lg-6">
-        <div class="quienes" id="quienessomos">
-          <h3>Quienes somos</h3>
-          <p class="p1">Nuestra institución educativa, Academia Educativa, ha estado brindando educación de calidad
-            durante más de 20 años. Nos enorgullece ser reconocidos como líderes en la formación integral de nuestros
-            estudiantes. Nuestro equipo de docentes altamente capacitados se dedica a fomentar un ambiente de
-            aprendizaje estimulante y motivador. Valoramos el crecimiento académico y personal de nuestros estudiantes y
-            nos esforzamos por prepararlos para un futuro exitoso.
-            Nuestra institución educativa, Academia Educativa, ha estado brindando educación de calidad
-            durante más de 20 años. Nos enorgullece ser reconocidos como líderes en la formación integral de nuestros
-            estudiantes. Nuestro equipo de docentes altamente capacitados se dedica a fomentar un ambiente de
-            aprendizaje estimulante y motivador. Valoramos el crecimiento académico y personal de nuestros estudiantes y
-            nos esforzamos por prepararlos para un futuro exitoso.
-            Nuestra institución educativa, Academia Educativa, ha estado brindando educación de calidad
-            durante más de 20 años. Nos enorgullece ser reconocidos como líderes en la formación integral de nuestros
-            estudiantes. Nuestro equipo de docentes altamente capacitados se dedica a fomentar un ambiente de
-            aprendizaje estimulante y motivador. Valoramos el crecimiento académico y personal de nuestros estudiantes y
-            nos esforzamos por prepararlos para un futuro exitoso.
-          </p>
-        </div>
-      </div>
-      <div class="col-lg-6">
-        <img src="./img/quienes somos.jpg" alt="Imagen" class="img-thumbnail" width="400">
-      </div>
-    </div>
-
-    <div class="row mt-4">
-      <div class="col-lg-6">
-        <img src="./img/porqueelegirnos.jpg" alt="Imagen" class="img-thumbnail">
-      </div>
-      <div class="col-lg-6">
-        <div class="elegirnos" id="¿Porqueelegirnos?">
-          <h3>¿Porque elegirnos?</h3>
-          <p>"En Academia Educativa, ofrecemos una experiencia educativa excepcional que marca la diferencia. Aquí, nos
-            preocupamos por cada estudiante de manera individualizada, brindando atención personalizada para satisfacer
-            sus necesidades únicas de aprendizaje. Nuestro enfoque innovador combina los estándares académicos más altos
-            con el desarrollo de habilidades prácticas y el fomento de la creatividad. Además, nuestras instalaciones
-            modernas y recursos tecnológicos de vanguardia garantizan un entorno propicio para el crecimiento y el
-            éxito".</p>
-        </div>
-      </div>
-
-      <div class="row mt-4">
-        <div class="col-lg-12">
-          <div class="propuesta" id="PropuestaEducativa">
-            <h3>Propuesta Educativa</h3>
-            <p>"Nuestra propuesta educativa se basa en un enfoque holístico que promueve el desarrollo integral de
-              nuestros estudiantes. Además de un plan de estudios sólido y riguroso, ofrecemos una amplia variedad de
-              actividades extracurriculares, como deportes, artes y clubes estudiantiles. Fomentamos el pensamiento
-              crítico, la resolución de problemas y el trabajo en equipo. Nuestro objetivo es preparar a nuestros
-              estudiantes para enfrentar los desafíos del mundo actual y convertirse en ciudadanos responsables y
-              exitosos".
+  <main>
+    <div class="contenedor" class="container mt-4">
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="quienes" id="quienessomos">
+            <h3>Quienes somos</h3>
+            <p class="p1">Nuestra institución educativa, Academia Educativa, ha estado brindando educación de calidad
+              durante más de 20 años. Nos enorgullece ser reconocidos como líderes en la formación integral de nuestros
+              estudiantes. Nuestro equipo de docentes altamente capacitados se dedica a fomentar un ambiente de
+              aprendizaje estimulante y motivador. Valoramos el crecimiento académico y personal de nuestros estudiantes
+              y
+              nos esforzamos por prepararlos para un futuro exitoso.
+              Nuestra institución educativa, Academia Educativa, ha estado brindando educación de calidad
+              durante más de 20 años. Nos enorgullece ser reconocidos como líderes en la formación integral de nuestros
+              estudiantes. Nuestro equipo de docentes altamente capacitados se dedica a fomentar un ambiente de
+              aprendizaje estimulante y motivador. Valoramos el crecimiento académico y personal de nuestros estudiantes
+              y
+              nos esforzamos por prepararlos para un futuro exitoso.
+              Nuestra institución educativa, Academia Educativa, ha estado brindando educación de calidad
+              durante más de 20 años. Nos enorgullece ser reconocidos como líderes en la formación integral de nuestros
+              estudiantes. Nuestro equipo de docentes altamente capacitados se dedica a fomentar un ambiente de
+              aprendizaje estimulante y motivador. Valoramos el crecimiento académico y personal de nuestros estudiantes
+              y
+              nos esforzamos por prepararlos para un futuro exitoso.
             </p>
           </div>
         </div>
+        <div class="col-lg-6">
+          <img src="./img/quienes somos.jpg" alt="Imagen" class="img-thumbnail" width="400">
+        </div>
       </div>
+
       <div class="row mt-4">
-        <div class="col-lg-3">
-          <img src="./img/tubo-de-ensayo1.png" alt="tubo-de-ensayo1" class="img-fluid">
+        <div class="col-lg-6">
+          <img src="./img/porqueelegirnos.jpg" alt="Imagen" class="img-thumbnail">
         </div>
-        <div class="col-lg-3">
-          <img src="./img/crecimiento.gif" alt="crecimiento" class="img-fluid">
+        <div class="col-lg-6">
+          <div class="quienes" id="¿Porqueelegirnos?">
+            <h3>¿Porque elegirnos?</h3>
+            <p class="p1">"En Academia Educativa, ofrecemos una experiencia educativa excepcional que marca la
+              diferencia.
+              Aquí, nos
+              preocupamos por cada estudiante de manera individualizada, brindando atención personalizada para
+              satisfacer
+              sus necesidades únicas de aprendizaje. Nuestro enfoque innovador combina los estándares académicos más
+              altos
+              con el desarrollo de habilidades prácticas y el fomento de la creatividad. Además, nuestras instalaciones
+              modernas y recursos tecnológicos de vanguardia garantizan un entorno propicio para el crecimiento y el
+              éxito".</p>
+          </div>
         </div>
-        <div class="col-lg-3">
-          <img src="./img/fisica.png" alt="fisica" class="img-fluid">
-        </div>
-        <div class="col-lg-3">
-          <img src="./img/lapiz.gif" alt="lapiz" class="img-fluid">
-        </div>
-      </div>
-      <div class="col-lg-6">
-        <div class="noticias" id="UltimasNoticias">
-          <h3>Ultimas Noticias</h3>
-          <p>Celebramos el éxito de nuestros estudiantes en el Concurso de Matemáticas.
-          <p> Nuestro nuevo laboratorio de ciencias con equipos de última generación.</p>
-          <p>Nuestro equipo de debate se lleva el primer lugar en el torneo regional.</p>
-          <p>Excursión educativa al museo local para enriquecer el aprendizaje histórico de nuestros estudiantes.</p>
-          </p>
-        </div>
-      </div>
-      <footer class="mt-4">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-4">
-              <h3>Redes Sociales</h3>
-              <ul class="red">
-                <li class="redes"><a href="https://www.facebook.com/"><img src="./img/facebook.png" alt="facebook"
-                      width="20" height="20"></a> Facebook</li>
-                <li class="redes"><a href="https://twitter.com/"><img src="./img/twitter.png" alt="facebook" width="20"
-                      height="20"></a> Twitter
-                </li>
-                <li class="redes"><a href="https://www.instagram.com/"><img src="./img/instagram.png" alt="facebook"
-                      width="20" height="20"></a> Instagram</li>
-              </ul>
-            </div>
-            <div class="col-lg-4">
-              <h3>UNTREFSCHOOL</h3>
-              <p>Mapa interactivo</p>
-              <div id="map"><iframe
-                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.7934067973465!2d-58.56507032338573!3d-34.60938525779918!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb825bfe94b41%3A0x9605c0d752a00a83!2sUNTREF%20Virtual!5e0!3m2!1ses!2sar!4v1689795288807!5m2!1ses!2sar"
-                  width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy"
-                  referrerpolicy="no-referrer-when-downgrade"></iframe></div>
-            </div>
-            <div class="col-lg-4">
-              <h3>Contacto</h3>
-              <p>Email: Untrefschool@untref.edu.ar</p>
-              <p>Teléfono: 4277-6543</p>
-              <p>WhatsApp: 1534567890</p>
+
+        <div class="row mt-4">
+          <div class="col-lg-12">
+            <div class="quienes" id="PropuestaEducativa">
+              <h3>Propuesta Educativa</h3>
+              <p class="p1">"Nuestra propuesta educativa se basa en un enfoque holístico que promueve el desarrollo
+                integral de
+                nuestros estudiantes. Además de un plan de estudios sólido y riguroso, ofrecemos una amplia variedad de
+                actividades extracurriculares, como deportes, artes y clubes estudiantiles. Fomentamos el pensamiento
+                crítico, la resolución de problemas y el trabajo en equipo. Nuestro objetivo es preparar a nuestros
+                estudiantes para enfrentar los desafíos del mundo actual y convertirse en ciudadanos responsables y
+                exitosos".
+              </p>
             </div>
           </div>
         </div>
-      </footer>
+        <div class="row mt-4">
+          <div class="col-lg-3">
+            <img src="./img/tubo-de-ensayo1.png" alt="tubo-de-ensayo1" class="img-fluid">
+          </div>
+          <div class="col-lg-3">
+            <img src="./img/crecimiento.gif" alt="crecimiento" class="img-fluid">
+          </div>
+          <div class="col-lg-3">
+            <img src="./img/fisica.png" alt="fisica" class="img-fluid">
+          </div>
+          <div class="col-lg-3">
+            <img src="./img/lapiz.gif" alt="lapiz" class="img-fluid">
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="quienes" id="UltimasNoticias">
+            <h3>Ultimas Noticias</h3>
+            <section class="p1">
+              <p>Celebramos el éxito de nuestros estudiantes en el Concurso de Matemáticas.
+              <p> Nuestro nuevo laboratorio de ciencias con equipos de última generación.</p>
+              <p>Nuestro equipo de debate se lleva el primer lugar en el torneo regional.</p>
+              <p>Excursión educativa al museo local para enriquecer el aprendizaje histórico de nuestros estudiantes.
+              </p>
+              </p>
+            </section>
+          </div>
+        </div>
+  </main>
+  <footer class="mt-4">
+    <div class="red">
+      <div class="row">
+        <div class="col-lg-4">
+          <h3>Redes Sociales</h3>
+          <ul class="red">
+            <li class="redes"><a href="https://www.facebook.com/"><img src="./img/facebook.png" alt="facebook"
+                  width="20" height="20"></a> Facebook</li>
+            <li class="redes"><a href="https://twitter.com/"><img src="./img/twitter.png" alt="facebook" width="20"
+                  height="20"></a> Twitter
+            </li>
+            <li class="redes"><a href="https://www.instagram.com/"><img src="./img/instagram.png" alt="facebook"
+                  width="20" height="20"></a> Instagram</li>
+          </ul>
+        </div>
+        <div class="col-lg-4">
+          <h3>UNTREFSCHOOL</h3>
+          <p>Mapa interactivo</p>
+          <div id="map"><iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.7934067973465!2d-58.56507032338573!3d-34.60938525779918!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb825bfe94b41%3A0x9605c0d752a00a83!2sUNTREF%20Virtual!5e0!3m2!1ses!2sar!4v1689795288807!5m2!1ses!2sar"
+              width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+        </div>
+        <div class="col-lg-4">
+          <h3>Contacto</h3>
+          <p>Email: Untrefschool@untref.edu.ar</p>
+          <p>Teléfono: 4277-6543</p>
+          <p>WhatsApp: 1534567890</p>
+        </div>
+      </div>
+    </div>
+  </footer>
 
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
