--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <title>Untrefschool</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href= "img/favicon.png" type="image/png">
 </head>
 
 <body>
