margen top ultimas noticias

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </div>
         <div class="col-lg-6">
           <div class="quienes" id="UltimasNoticias">
-            <h3>Ultimas Noticias</h3>
+            <h3 class="margen">Ultimas Noticias</h3>
             <section class="p1">
               <p>Celebramos el éxito de nuestros estudiantes en el Concurso de Matemáticas.
               <p> Nuestro nuevo laboratorio de ciencias con equipos de última generación.</p>
