--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <meta name="description" content="Sitio de Untref proyecto integrador">
   <meta name="author" content="Luis Alberto Benitez">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;1,100;1,200&display=swap"
+    rel="stylesheet">
   <title>Untrefschool</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="icon" href= "img/favicon.png" type="image/png">
+  <link rel="icon" href="img/favicon.png" type="image/png">
 </head>
 
 <body>
@@ -102,12 +106,11 @@
             <div class="quienes" id="PropuestaEducativa">
               <h3>Propuesta Educativa</h3>
               <p class="p1">"Nuestra propuesta educativa se basa en un enfoque holístico que promueve el desarrollo
-                integral de
-                nuestros estudiantes. Además de un plan de estudios sólido y riguroso, ofrecemos una amplia variedad de
-                actividades extracurriculares, como deportes, artes y clubes estudiantiles. Fomentamos el pensamiento
-                crítico, la resolución de problemas y el trabajo en equipo. Nuestro objetivo es preparar a nuestros
-                estudiantes para enfrentar los desafíos del mundo actual y convertirse en ciudadanos responsables y
-                exitosos".
+                integral de nuestros estudiantes. Además de un plan de estudios sólido y riguroso, ofrecemos una amplia
+                variedad de actividades extracurriculares, como deportes, artes y clubes estudiantiles. Fomentamos el
+                pensamiento crítico, la resolución de problemas y el trabajo en equipo. Nuestro objetivo es preparar a
+                nuestros estudiantes para enfrentar los desafíos del mundo actual y convertirse en ciudadanos
+                responsables y exitosos".
               </p>
             </div>
           </div>
