--- a/indexcontacto.html
+++ b/indexcontacto.html
@@ -1,36 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;1,100;1,200&display=swap"
-    rel="stylesheet">
-    <title>Contacto</title>
-    <link rel="stylesheet" href="css/estilos.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Formulario con Verificación</title>
+  <link rel="stylesheet" href="./css/estilos.css">
 </head>
-  <body>
-    <div class="main-block">
-      <div class="left-part">
-        <i class="fas fa-envelope"></i>
-        <i class="fas fa-at"></i>
-        <i class="fas fa-mail-bulk"></i>
-      </div>
-      <form action="/">
-        <h1>Contacto</h1>
-        <div class="info">
-          <input class="fname" type="text" name="name" placeholder="Nombre Completo">
-          <input type="text" name="name" placeholder="Email">
-          <input type="text" name="name" placeholder="Numero de Contacto">
-          <input type="text" name="name" placeholder="Website">
-        </div>
-        <p>Mensaje</p>
-        <div>
-          <textarea rows="4"></textarea>
-        </div>
-        <button type="submit" href="/">Submit</button>
-      </form>
-    </div>
-  </body>
+<body>
+  <div class="container">
+    <form id="formulario">
+      <h2>Formulario de Registro</h2>
+      <label for="nombre">Nombre Completo:</label>
+      <input type="text" id="nombre" required>
+
+      <label for="email">Email:</label>
+      <input type="email" id="email" required>
+
+      <label for="telefono">Número de Teléfono:</label>
+      <input type="tel" id="telefono" required>
+
+      <button type="submit">Enviar</button>
+    </form>
+    <div id="resultado"></div>
+  </div>
+
+  <script src="script.js"></script>
+</body>
 </html>
