se agrego autor - fonts de google - favicon

--- a/indexcontacto.html
+++ b/indexcontacto.html
@@ -3,8 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Formulario con Verificación</title>
+  <meta name="description" content="Sitio de Untref proyecto integrador">
+  <meta name="author" content="Luis Alberto Benitez">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;1,100;1,200&display=swap"
+    rel="stylesheet">
+  <title>FORM UNTREFSCHOOL</title>
   <link rel="stylesheet" href="./css/estilos.css">
+  <link rel="icon" href="img/favicon.png" type="image/png">
 </head>
 <body>
   <div class="container">
