--- a/indexcontacto.html
+++ b/indexcontacto.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,24 +14,25 @@
   <link rel="stylesheet" href="./css/estilos.css">
   <link rel="icon" href="img/favicon.png" type="image/png">
 </head>
+
 <body>
   <div class="container">
-    <form id="formulario">
-      <h2>Formulario de Registro</h2>
-      <label for="nombre">Nombre Completo:</label>
-      <input type="text" id="nombre" required>
+    <form id="fs-frm" name="formulario" accept-charset="utf-8"   action="https://formspree.io/f/xoqovnjj"
+    method="POST">
 
-      <label for="email">Email:</label>
-      <input type="email" id="email" required>
+        <h2>Formulario de Registro</h2>
+        <label for="full-name">Nombre completo</label>
+        <input type="text" id="nombre" required>
+        <label for="email-address">Email</label>
+        <input type="email" id="email" required>
+        <label for="message">Mensaje</label>
+        <textarea rows="5" name="message" id="message" placeholder="Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Donec ullamcorper nulla non metus auctor fringilla nullam quis risus." required="auto"></textarea>
+        <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
 
-      <label for="telefono">Número de Teléfono:</label>
-      <input type="tel" id="telefono" required>
-
-      <button type="submit">Enviar</button>
+      <input type="submit" value="Submit">
     </form>
     <div id="resultado"></div>
   </div>
-
   <script src="script.js"></script>
 </body>
 </html>
